2001-11-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/3637
	* call.c (non_reference): Add documentation.
	(convert_class_to_reference): Do not strip reference types 
	from conversion operators.
	(maybe_handle_ref_bind): Simplify.
	(compare_ics): Correct handling of references.

2001-11-19  Mark Mitchell  <mark@codesourcery.com>

	* cp/decl2.c (grok_alignof): Make sure that expression created
	while processing a template do not have a type.
	* cp/typeck.c (c_sizeof): Likewise.
	(expr_sizeof): Likewise.
	(c_alignof): Likewise.

2001-11-14  Joseph S. Myers  <jsm28@cam.ac.uk>

	* Make-lang.in: Change all uses of $(manext) to $(man1ext).

2001-10-23  Release Manager

	* GCC 3.0.2 Released.

2001-10-03  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* rtti.c (get_tinfo_decl): Call typeinfo_in_lib_p with the type used
	to build the declaration instead of the declaration itself.

2001-09-28  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	PR c++/4095
	* rtti.c (create_pseudo_type_info): Fix parameter.

2001-09-21  Richard Henderson  <rth@redhat.com>

	* class.c (set_vindex): Mind TARGET_VTABLE_USES_DESCRIPTORS.
	(build_vtbl_initializer): Likewise.
	(build_vfn_ref): New.
	* cp-tree.h: Declare it.
	* call.c (build_over_call): Use it.
	* decl2.c (mark_vtable_entries): Mark FDESC_EXPR.
	* typeck.c (get_member_function_from_ptrfunc): Mind descriptors.
	* rtti.c (get_tinfo_decl_dynamic): Use build_vtbl_ref instead
	of build_vfn_ref.

2001-09-15  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* Make-lang.in (cp/error.o): Depend on real.h
	* error.c: #include "real.h"

2001-09-06  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3986
	* class.c (force_canonical_binfo_r): Check & move an indirect
	primary base first.
	(force_canonical_binfo): Check that it's not already
	canonical.
	(mark_primary_virtual_base): Remove BINFO parameter.
	(mark_primary_bases): Adjust, set BINFO_LOST_PRIMARY_P here.

	(binfo_ctor_vtable): Add prototype.
	(get_primary_binfo): Initialize RESULT.
