@@ -4,7 +4,7 @@ int count;
 
 class A {
   A();
-  A(const A&);			// ERROR - referenced below
+  A(const A&);
 public:
   A(int) { ++count; }
   ~A() { --count; }
@@ -14,7 +14,7 @@ public:
 int main() {
   {
     A a (1);
-    if (a == 2 && a == 1)	// ERROR - private copy ctor
+    if (a == 2 && a == 1)
       ;
   }
   return count;
