@@ -1,3 +1,9 @@
+2001-11-29  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/3471
+	* call.c (convert_like_real): Do not build additional temporaries
+	for rvalues of class type.
+
 2001-11-20  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/3637
